<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@android:color/transparent"
        android:clickable="true"
        android:focusable="true">

        <ImageView
            android:id="@+id/home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center"
            android:layout_marginLeft="16dp"
            android:padding="16dp"
            android:src="@drawable/ic_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/settings_lang"
            android:textColor="@color/item_text_normal"
            android:textSize="16sp"
            android:textStyle="bold" />
    </FrameLayout>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="#FFFFFF"
        app:cardCornerRadius="16dp"
        app:cardElevation="0dp"
        app:cardPreventCornerOverlap="false"
        app:strokeColor="#6A6A6A">

        <!--        android:background="#20000000"-->

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radioZH"
                style="@style/LangSettingButton"
                android:text="@string/lan_zh" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray_divider" />

            <RadioButton
                android:id="@+id/radioHant"
                style="@style/LangSettingButton"
                android:text="@string/lan_zh_hant"  />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray_divider" />

            <RadioButton
                android:id="@+id/radioEN"
                style="@style/LangSettingButton"
                android:text="@string/lan_en" />
        </RadioGroup>
    </com.google.android.material.card.MaterialCardView>


</LinearLayout>

